# levi-launcher-x-toolcoin-

./: .gitignore  .gitmodules  README.md  TOOLCOIN.md
.github/workflows/: android.yml  docs.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: keys.tsv
app/src/main/assets/cosmos/LauncherJsons/: AllowedUrls.json  MainResponses.json  PlayfabGetPublishItemResponses.json  PlayfabSearchResponses.json
app/src/main/assets/cosmos/MainPages/: BedrockCosmos_PersonaCreatorPage.json  Capes.json  Cosmos_Creator_Hub.json  DressingRoom_Hidden.json  DressingRoom_PersonaProfile.json  FallbackMarketplaceButton_append.json  LegacyVault.json  MainMarketplaceButton_append.json  MainMarketplacePage.json  MinecraftCosmos_PersonaCreatorPage.json  MinecraftRestored.json  MultiItemPage_PersonaCharacterCreator.json  MultiItemPage_PersonaSkinSelector_append.json  PagedList_Wishlist.json  VerticalLineDivider_append.json
app/src/main/assets/cosmos/News/: CurrentNews_append.json  LoginAnnouncement_append.json
app/src/main/assets/cosmos/Persona/CustomCapes/: BlockOfDiamond_cape.json  BlockOfGold_cape.json  BlockOfNetherite_cape.json  BreezePurple_cape.json  Breeze_cape.json  CreeperKing_cape.json  CryingObsidian_cape.json  Cubecraft_cape.json  Diamond_cape.json  Dragon_cape.json  EnchantingTable_cape.json  EnderPearl_cape.json  EyeOfEnder1_cape.json  GameBoy2_cape.json  GildedBlackstone2_cape.json  GlassNew_cape.json  GoldenApple1_cape.json  Hardcore_cape.json  Hypixel_cape.json  Microsoft_cape.json  NetherStar_cape.json  Omniarchive_cape.json  Optifine10thAnniversary_cape.json  Optifine_cape.json  Paper_cape.json  PhantomWings_cape.json  Pumpkin_cape.json  Switch_cape.json  Sword_cape.json  TheHive_cape.json  TotemOfUndying_cape.json  YouTube1_cape.json
app/src/main/assets/httphook/spoofs/: append_toolcoin_button.json  append_toolcoin_cosmos_button.json  base_library_toolcoin.json  capes.json  capes_preview.json  capes_preview_bionic.json  easter_egg.json
app/src/main/cpp/inbuiltmods/: CMakeLists.txt
app/src/main/cpp/preloader/: CMakeLists.txt
app/src/main/cpp/preloader/include/pl/: Config.hpp  Export.hpp  Input.hpp  Logger.hpp  Mod.hpp  ModMenu.hpp
app/src/main/cpp/preloader/include/pl/memory/: Hook.hpp  Patch.hpp  Signature.hpp  Vtable.hpp
app/src/main/cpp/preloader/src/pl/: Logger.h  Mod.cpp  PreLoader.cpp
app/src/main/cpp/preloader/src/pl/internal/: LoadedModRegistry.cpp  LoadedModRegistry.h  ModManager.cpp  ModManager.h  ModManifest.cpp  ModManifest.h  NativeModLifecycle.cpp  NativeModLifecycle.h
app/src/main/cpp/preloader/src/pl/legacy/: LegacyHook.cpp  LegacyHook.h  LegacyInput.cpp  LegacyInput.h  LegacyMacro.h  LegacyPatch.cpp  LegacyPatch.h  LegacySignature.cpp  LegacySignature.h
app/src/main/cpp/preloader/src/pl/memory/: Hook.cpp  Patch.cpp  Signature.cpp  Vtable.cpp
app/src/main/cpp/preloader/src/pl/runtime/: ExternalModBridgeJni.cpp  GameHookRules.cpp  GameHookRules.h  GameHooks.cpp  GameHooks.h  InputBridge.cpp  InputBridge.h  InputJni.cpp  ModMenuBridge.cpp  ModMenuBridge.h
app/src/main/res/color/: color_filter_chip_text.xml
app/src/main/res/drawable/: badge_owned_bg.xml  bg_error_button.xml  bg_external_overlay_button.xml  bg_filter_chip.xml  bg_loading_progress.xml  bg_loading_track.xml  bg_mod_page_badge.xml  bg_mod_status_disabled.xml  bg_search_field.xml  creeper.xml  ic_hud.xml  ic_leaf_logo_vector.xml  ic_lock.xml  levi_toolcoin.xml  nav_item_background_selected.xml  toolcoin.xml
app/src/main/res/drawable-night/: bg_mod_page_badge.xml
app/src/main/res/layout/: activity_content_details.xml  activity_content_list.xml  activity_curseforge.xml  activity_instance_settings.xml  activity_instances.xml  activity_main.xml  activity_marketplace.xml  activity_mod_config.xml  activity_mod_detail.xml  activity_mods_fullscreen.xml  activity_settings.xml  activity_splash.xml  activity_toolcoin.xml  alert_dialog_custom.xml  dialog_file_list.xml  dialog_install_progress.xml  dialog_libs_repair.xml  dialog_transfer_content.xml  item_curseforge_content.xml  item_file_detail.xml  item_instance_card.xml  item_mod.xml  item_mod_config_node.xml  item_mod_detail_meta_row.xml  item_mod_menu_card.xml  item_search_result.xml  item_settings_label.xml  item_settings_switch.xml  nav_bar.xml  overlay_external_button.xml  overlay_mod_menu.xml  popup_instance_selector.xml
app/src/main/res/menu/: language_menu.xml
app/src/main/res/values/: ids.xml  strings.xml  styles.xml  theme.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-idn/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v27/: styles.xml  theme.xml
app/src/main/res/values-v29/: theme.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_provider_paths.xml
docs/: index.md  package-lock.json  package.json  privacy-policy.md
docs/.vitepress/: config.mts
docs/api/: config.md  hook.md  input.md  memory-hook-macros.md  mod-menu.md  mod.md  patch.md  signature.md  types-and-macros.md
docs/guide/: build.md  compatibility.md  developer.md  features.md  getting-started.md
docs/public/: CNAME
docs/zh-CN/: index.md
docs/zh-CN/api/: config.md  hook.md  input.md  memory-hook-macros.md  mod-menu.md  mod.md  patch.md  signature.md  types-and-macros.md
docs/zh-CN/guide/: build.md  compatibility.md  developer.md  features.md  getting-started.md
examples/full-cpp-mod/: CMakeLists.txt  README.md  build.ps1  manifest.json
examples/full-cpp-mod/src/: ExampleConfig.hpp  FullCppMod.cpp  GenerateConfig.cpp
examples/mod-menu-api/: CMakeLists.txt  build.ps1
examples/mod-menu-api/manifests/cpp-lifecycle/: manifest.json
examples/mod-menu-api/src/: cpp_lifecycle_mod.cpp
gradle/: libs.versions.toml
resources/preloader/: preloader_signature_rules_source.json
(+520 files in other folders)
